--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 BRIGHT_DATA_USERNAME=brd-customer-hl_5f0e3bd8-zone-pricewise
 BRIGHT_DATA_PASSWORD=c9or4f6dqm2h
+
+MONGODB_URI=mongodb+srv://tharsh95:bbr9ONtSUOIrO3Pf@clusteridurar.lakweij.mongodb.net/?retryWrites=true&w=majority&appName=ClusterIdurar
+
