--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
+    "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "nodemailer": "^6.9.11",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23"
